human-intervention-logs/com.google.errorprone:error_prone_annotations:2.46.0/gradle-test/gradle-test-2026-05-05T01-42-11-752772Z.log
Starting a Gradle Daemon, 9 busy and 2 incompatible and 319 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.google.errorprone:error_prone_annotations:2.46.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :jar UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :checkTestTimeoutAnnotations
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 2 executed, 11 up-to-date
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java:174: error: incompatible types: javax.lang.model.element.Modifier cannot be converted to com.google.errorprone.annotations.Modifier
    @RequiredModifiers(modifier = Modifier.PUBLIC)
                                          ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java:175: error: incompatible types: javax.lang.model.element.Modifier cannot be converted to com.google.errorprone.annotations.Modifier
    @IncompatibleModifiers(modifier = {Modifier.PRIVATE, Modifier.PROTECTED})
                                               ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java:175: error: incompatible types: javax.lang.model.element.Modifier cannot be converted to com.google.errorprone.annotations.Modifier
    @IncompatibleModifiers(modifier = {Modifier.PRIVATE, Modifier.PROTECTED})
                                                                 ^
Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java:174: error: incompatible types: javax.lang.model.element.Modifier cannot be converted to com.google.errorprone.annotations.Modifier
      @RequiredModifiers(modifier = Modifier.PUBLIC)
                                            ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java:175: error: incompatible types: javax.lang.model.element.Modifier cannot be converted to com.google.errorprone.annotations.Modifier
      @IncompatibleModifiers(modifier = {Modifier.PRIVATE, Modifier.PROTECTED})
                                                 ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/tests/src/com.google.errorprone/error_prone_annotations/2.46.0/src/test/java/com_google_errorprone/error_prone_annotations/Error_prone_annotationsTest.java:175: error: incompatible types: javax.lang.model.element.Modifier cannot be converted to com.google.errorprone.annotations.Modifier
      @IncompatibleModifiers(modifier = {Modifier.PRIVATE, Modifier.PROTECTED})
                                                                   ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 3s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5592-a5df01e3/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.google.errorprone:error_prone_annotations:2.46.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 10s
9 actionable tasks: 1 executed, 8 up-to-date
